key animations: trying to rename in f-curve editor / dope sheet / NLA modifies object name instead #40292

Closed
opened 2014-05-21 11:57:24 +02:00 by Michael Otto · 5 comments

System Information
Win7, GTX580

Blender Version
2.70a
Worked: (optional)

Short description of error
in f-curve editor, dope sheet and NLA editor (only tried these three), if you're trying to rename the key datablock (shape keys) by ctrl-clicking on the entry, the object's name is displayed and modified.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
See attached blend file: ctrl-klick on "Key" in action editor etc. The editable text will be "Cube", and if you change it, the Cube object's name is changed.keyNaming.blend

**System Information** Win7, GTX580 **Blender Version** 2.70a Worked: (optional) **Short description of error** in f-curve editor, dope sheet and NLA editor (only tried these three), if you're trying to rename the key datablock (shape keys) by ctrl-clicking on the entry, the object's name is displayed and modified. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps See attached blend file: ctrl-klick on "Key" in action editor etc. The editable text will be "Cube", and if you change it, the Cube object's name is changed.[keyNaming.blend](https://archive.blender.org/developer/F89565/keyNaming.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelOtto

Added subscriber: @MichaelOtto

This issue was referenced by 5bb615c41e

This issue was referenced by 5bb615c41e12af9c47b4d7a9d356d3a3054470aa
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 5bb615c41e.

Closed by commit 5bb615c41e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40292
No description provided.