Bugfix T40292: Trying to rename shapekey datablocks from AnimEditors renamed object instead